# muon

atom/app/: atom_main_delegate.cc
atom/browser/: atom_browser_context.cc  atom_browser_context.h  atom_browser_main_parts.cc  atom_download_manager_delegate.cc  atom_download_manager_delegate.h  native_window_views.cc
atom/browser/api/: atom_api_debugger.cc  atom_api_session.cc  atom_api_web_contents.cc  atom_api_web_contents.h
atom/browser/extensions/: atom_extension_system.h  atom_extension_web_contents_observer.cc  atom_extensions_network_delegate.cc  atom_extensions_network_delegate.h  tab_helper.cc
atom/browser/net/: atom_network_delegate.cc  atom_network_delegate.h
brave/browser/: BUILD.gn  brave_browser_context.cc  brave_browser_context.h  brave_content_browser_client.cc  brave_content_browser_client.h
brave/browser/component_updater/: extension_installer_traits.h  widevine_cdm_component_installer.cc
brave/browser/notifications/: platform_notification_service_impl.cc
brave/renderer/: brave_content_renderer_client.cc
chromium_src/: BUILD.gn
chromium_src/chrome/browser/: browser_process_impl.cc  io_thread.cc  io_thread.h
chromium_src/chrome/browser/download/: download_prefs.cc
chromium_src/chrome/browser/extensions/: BUILD.gn  extension_service.cc  extension_service.h  extension_tab_util.cc  extension_util.cc
chromium_src/chrome/browser/net/: system_network_context_manager.cc
chromium_src/chrome/browser/prerender/: BUILD.gn
chromium_src/chrome/browser/safe_browsing/: safe_browsing_service.cc
chromium_src/chrome/browser/ui/: browser.cc  browser.h  browser_window.h
chromium_src/chrome/browser/ui/tabs/: tab_utils.cc
chromium_src/chrome/browser/ui/views/infobars/: confirm_infobar.cc
chromium_src/chrome/browser/ui/webui/: chrome_web_ui_controller_factory.cc
muon/browser/: muon_browser_process_impl.cc
patches/: master_patch.patch
